deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login-app-container
        image: vikasveldi/login-app
        ports:
        - containerPort: 80
...
