service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: login-app-service
spec:
  type: NodePort
  selector:
    app: login
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
...
